Fix spacing on hr

--- a/style.css
+++ b/style.css
@@ -293,6 +293,8 @@ main {
 .fa-chevron-circle-up {
   color: #b9b8be;
   font-size: 1rem;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 hr {
@@ -608,7 +610,7 @@ h5 i{
   }
 
   .right-side-nav-container {
-    padding: 0 20px 10px 20px;
+    padding: 0 2px 10px 2px;
   }
 
   .secondary-content {
